<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context="com.Rsoft.easy_mobile.MainActivity">
    <Button
            android:text="@string/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            tools:ignore="MissingConstraints"
            android:onClick="on_click"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="216dp" android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="314dp"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="332dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.493"/>
    <TextView
            android:text="@string/please_input"
            android:layout_width="389dp"
            android:layout_height="53dp"
            android:id="@+id/textView4" android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="448dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/help_me_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:onClick="help_me_choose"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="216dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="63dp"/>
    <ImageView
            android:layout_width="69dp"
            android:layout_height="50dp" app:srcCompat="@android:drawable/ic_menu_info_details"
            android:id="@+id/imageView3" android:onClick="web_click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.13"
            android:layout_marginEnd="38dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/version"
            android:layout_width="199dp"
            android:layout_height="42dp"
            android:id="@+id/textView5" android:clickable="false"
            android:contextClickable="false" android:linksClickable="false" android:longClickable="false"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#A7FFEB" android:textStyle="bold|italic"
            android:layout_marginStart="188dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>