<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.Rsoft.easy_mobile.server_activity" android:contentDescription="下载">
    <EditText
            android:layout_width="334dp"
            android:layout_height="65dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/rec_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.349"
            app:layout_constraintHorizontal_bias="0.366"/>
    <View
            android:layout_width="364dp"
            android:layout_height="0dp"
            android:id="@+id/view3"
            android:clickable="true" android:contextClickable="true" android:onClick="copy_to_clipboad"
            app:layout_constraintBottom_toTopOf="@+id/view4" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="218dp" android:layout_marginBottom="183dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/view4"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            android:layout_marginBottom="46dp" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/send_msg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="1dp"/>
    <Button
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg"
            android:onClick="send_msg"
            app:layout_constraintTop_toBottomOf="@+id/view4" app:layout_constraintStart_toEndOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="25dp"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintBaseline_toBaselineOf="@+id/send_msg"
            app:layout_constraintEnd_toStartOf="@+id/send_msg" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="25dp"
    />
    <TextView
            android:text="@string/rec_area"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:id="@+id/textView3"
            android:textSize="36sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/view3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="118dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4" android:layout_marginEnd="24dp"
    />
    <TextView
            android:text="@string/send_area"
            android:layout_width="219dp"
            android:layout_height="84dp"
            android:id="@+id/textView6"
            android:textSize="36sp" android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/rec_text"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.327"
    />
    <ImageButton
            android:layout_width="164dp"
            android:layout_height="118dp" app:srcCompat="@android:drawable/ic_search_category_default"
            android:id="@+id/imageButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.969"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.825"
            android:onClick="testButton"/>
    <TextView
            android:text="@string/heart"
            android:layout_width="434dp"
            android:layout_height="52dp"
            android:id="@+id/textView" android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.531"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ImageButton
            android:layout_width="162dp"
            android:layout_height="117dp" app:srcCompat="@android:drawable/stat_sys_download"
            android:id="@+id/imageButton2"
            android:onClick="Inital_derectory"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.451" app:layout_constraintVertical_bias="0.823"
            app:layout_constraintEnd_toStartOf="@+id/imageButton" android:contentDescription="下载"
    />
    <ImageView
            android:layout_width="0dp"
            android:layout_height="56dp" app:srcCompat="@android:drawable/ic_menu_info_details"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:id="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent" android:onClick="web_click"/>
</androidx.constraintlayout.widget.ConstraintLayout>